# paragon_apfs_sdk_ce

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  make.sh
crypt/cipher/: aescipher.cpp  aescipher.hpp  cipherfactory.cpp  cipherfactory.hpp
crypt/hash/: hash.cpp  hash.hpp
linutil/: apfsutil.cpp  debug.cpp  funcs.h  gettext.h  misc.cpp  ufsdio.cpp  ufsdlog.cpp  ufsdmmgr.cpp  ufsdstr.cpp  ufsdtime.cpp
ufs/api/include/api/: assert.hpp  cipher.hpp  compress.hpp  crypt.hpp  errors.hpp  export.hpp  fileio.hpp  fsattribs.hpp  hash.hpp  log.hpp  memory_mgm.hpp  message.hpp  rwb.hpp  string.hpp  time.hpp  types.hpp
ufs/ufsd/include/: ufsd.h
ufs/ufsd/include/ufsd/: u_chkdsk.h  u_defrag.h  u_errors.h  u_fsbase.h  u_ioctl.h  u_list.h  u_mmngr.h  u_rwblck.h  u_types.h  u_ufsd.h  ufsd_export.hpp
ufs/ufsd/src/apfs/: apfs.cpp  apfs.h  apfs_struct.h  apfsbplustree.cpp  apfsbplustree.h  apfscompr.cpp  apfscompr.h  apfsencryption.cpp  apfsenum.cpp  apfsenum.h  apfshash.cpp  apfshash.h  apfsinode.cpp  apfsinode.h  apfssuper.cpp  apfssuper.h  apfstable.cpp  apfstable.h  apfsvolsb.cpp  apfsvolsb.h  apfsxattr.cpp  dirapfs.cpp  dirapfs.h
ufs/ufsd/src/common/: crc32.cpp  fsbase.cpp  uavl.cpp
ufs/ufsd/src/h/: assert.h  bitfunc.h  crc32.h  uavl.h  ubitmap.h  ucommon.h  uerrors.h  uint64.h  uswap.h  utrace.h  versions.h  verstr.h
ufs/ufsd/src/lzfse/: lzfse_struct.h  ulzfse.cpp  ulzfse.h
ufs/ufsd/src/unixfs/: unixblock.cpp  unixblock.h  unixdir.cpp  unixdir.h  unixenum.cpp  unixenum.h  unixfile.cpp  unixfile.h  unixfs.cpp  unixfs.h  unixinode.cpp  unixinode.h  unixsuperblock.cpp  unixsuperblock.h
ufs/ufsd/src/zlib/: adler32.cpp  crc32.cpp  infback.cpp  inffast.cpp  inffast.h  inflate.cpp  inflate.h  inftrees.cpp  inftrees.h  uncompr.cpp  uzlib.cpp  uzlib.h  zconf.h  zlib.h  zutil.cpp  zutil.h
